fix top section h1 z-index.

--- a/css/main.css
+++ b/css/main.css
@@ -264,6 +264,7 @@ html {
     bottom: 105px;
     font-size: 1.0rem;
     line-height: 1.5em;
+    z-index: 500;
 }
 
 /* concept */
